--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,310 @@
             <div class="text-box">
                 <h1>"Wine is bottled poetry"</h1></section>
             </div>
-        <section>Featured Wine</section>
-        <section>Shop</section>
+            <div class="img-wrapper">
+                <img src="../public/img/wine-bottles/Rxg_HyC7Qf2KR7kN--iyRA_pb_x600.png" alt="" srcset="">
+            </div>
+            <div class="menu-wrapper">
+                <ul>
+                    <li>SEC</li>
+                    <li>ALB</li>
+                    <li>12.5%</li>
+                    <li>750ml</li>
+                    <li>Italy</li>
+                </ul>
+            </div>
+            
+
+        </section>
+
+        <section id="shop">
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/1i1MlXXaS7qHjS84jPKX3Q_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>LA CHABLISIENNE</h1>
+                    <h2>CHABLIS 1ER CRU FOURCHAUME</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Bourgogne Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Chardonnay</li>
+                        <li><img src="../public/icons/flag.svg">Bourgogne</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/uf3a1F82SGuBiTtJAdRJhA_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>UMANI RONCHI</h1>
+                    <h2> Cùmaro Conero Riserva</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Tintilia</li>
+                        <li><img src="../public/icons/flag.svg">Italy / Molise</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/4fVjSKYtQcSx_mOBWZtDOg_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Albert Bichot</h1>
+                    <h2>Chablis</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Burgundy Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Tintilia</li>
+                        <li><img src="../public/icons/flag.svg">Bourgogne</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/nBupGePBQt-PepuMfRdW-g_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Tombacco</h1>
+                    <h2>Biferno Rosso Riserva</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                        <li><img src="../public/icons/flag.svg">Biferno</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/pUJHLZWdSOWU2dUOyzpRKw_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Fiore Podere San Biagio</h1>
+                    <h2>Cafone Colli Aprutini Rosso</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                        <li><img src="../public/icons/flag.svg">Colli Aprutini</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/Rdcvxwk_THm1IVkQp57DUA_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Samuel Billaud</h1>
+                    <h2>Chablis (Les Grands Terroirs)</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Burgundy Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Chardonnay</li>
+                        <li><img src="../public/icons/flag.svg">Colli Aprutini</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/1i1MlXXaS7qHjS84jPKX3Q_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>LA CHABLISIENNE</h1>
+                    <h2>CHABLIS 1ER CRU FOURCHAUME</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Bourgogne Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Chardonnay</li>
+                        <li><img src="../public/icons/flag.svg">Bourgogne</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/uf3a1F82SGuBiTtJAdRJhA_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>UMANI RONCHI</h1>
+                    <h2> Cùmaro Conero Riserva</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Tintilia</li>
+                        <li><img src="../public/icons/flag.svg">Italy / Molise</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/4fVjSKYtQcSx_mOBWZtDOg_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Albert Bichot</h1>
+                    <h2>Chablis</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Burgundy Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Tintilia</li>
+                        <li><img src="../public/icons/flag.svg">Bourgogne</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/nBupGePBQt-PepuMfRdW-g_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Tombacco</h1>
+                    <h2>Biferno Rosso Riserva</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                        <li><img src="../public/icons/flag.svg">Biferno</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/pUJHLZWdSOWU2dUOyzpRKw_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Fiore Podere San Biagio</h1>
+                    <h2>Cafone Colli Aprutini Rosso</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                        <li><img src="../public/icons/flag.svg">Colli Aprutini</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/Rdcvxwk_THm1IVkQp57DUA_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Samuel Billaud</h1>
+                    <h2>Chablis (Les Grands Terroirs)</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Burgundy Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Chardonnay</li>
+                        <li><img src="../public/icons/flag.svg">Colli Aprutini</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/4fVjSKYtQcSx_mOBWZtDOg_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Albert Bichot</h1>
+                    <h2>Chablis</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">White</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Burgundy Chablis</li>
+                        <li><img src="../public/icons/grapes.svg">Tintilia</li>
+                        <li><img src="../public/icons/flag.svg">Bourgogne</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/nBupGePBQt-PepuMfRdW-g_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Tombacco</h1>
+                    <h2>Biferno Rosso Riserva</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                        <li><img src="../public/icons/flag.svg">Biferno</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div>
+            </div>
+            <div class="wine">
+                <div class="img-wrapper">
+                    <img src="../public/img/wine-bottles/pUJHLZWdSOWU2dUOyzpRKw_pb_x600.png" alt="LA CHABLISIENNE">
+                </div>
+                <div class="content">
+                    <h1>Fiore Podere San Biagio</h1>
+                    <h2>Cafone Colli Aprutini Rosso</h2>
+                    <ul>
+                        <li><img src="../public/icons/wine-glass.svg">Red</li>
+                        <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                        <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                        <li><img src="../public/icons/flag.svg">Colli Aprutini</li>
+                    </ul>
+                    <a href="#" class="btn-buy">19,90€</a>
+                </div><div class="wine">
+                    <div class="img-wrapper">
+                        <img src="../public/img/wine-bottles/4fVjSKYtQcSx_mOBWZtDOg_pb_x600.png" alt="LA CHABLISIENNE">
+                    </div>
+                    <div class="content">
+                        <h1>Albert Bichot</h1>
+                        <h2>Chablis</h2>
+                        <ul>
+                            <li><img src="../public/icons/wine-glass.svg">White</li>
+                            <li><img src="../public/icons/wine-bottle.svg">Burgundy Chablis</li>
+                            <li><img src="../public/icons/grapes.svg">Tintilia</li>
+                            <li><img src="../public/icons/flag.svg">Bourgogne</li>
+                        </ul>
+                        <a href="#" class="btn-buy">19,90€</a>
+                    </div>
+                </div>
+                <div class="wine">
+                    <div class="img-wrapper">
+                        <img src="../public/img/wine-bottles/nBupGePBQt-PepuMfRdW-g_pb_x600.png" alt="LA CHABLISIENNE">
+                    </div>
+                    <div class="content">
+                        <h1>Tombacco</h1>
+                        <h2>Biferno Rosso Riserva</h2>
+                        <ul>
+                            <li><img src="../public/icons/wine-glass.svg">Red</li>
+                            <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                            <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                            <li><img src="../public/icons/flag.svg">Biferno</li>
+                        </ul>
+                        <a href="#" class="btn-buy">19,90€</a>
+                    </div>
+                </div>
+                <div class="wine">
+                    <div class="img-wrapper">
+                        <img src="../public/img/wine-bottles/pUJHLZWdSOWU2dUOyzpRKw_pb_x600.png" alt="LA CHABLISIENNE">
+                    </div>
+                    <div class="content">
+                        <h1>Fiore Podere San Biagio</h1>
+                        <h2>Cafone Colli Aprutini Rosso</h2>
+                        <ul>
+                            <li><img src="../public/icons/wine-glass.svg">Red</li>
+                            <li><img src="../public/icons/wine-bottle.svg">Central Italy Red</li>
+                            <li><img src="../public/icons/grapes.svg">Montepulciano</li>
+                            <li><img src="../public/icons/flag.svg">Colli Aprutini</li>
+                        </ul>
+                        <a href="#" class="btn-buy">19,90€</a>
+                    </div>
+
+        </section>
     </main>
 
     <script src="./js/app.js"></script>
